--- a/proto/google/fhir/proto/r4/core/profiles/BUILD
+++ b/proto/google/fhir/proto/r4/core/profiles/BUILD
@@ -585,3 +585,10 @@ filegroup(
         exclude = ["datatypes.proto"],
     ),
 )
+
+filegroup(
+    name = "all_proto",
+    srcs = glob([
+        "*.proto",
+    ]),
+)
